# adk-secretary-sample

./: .gitignore  README.md  config.py  generate_schema.py  llm_model.py  pyproject.toml
.devcontainer/: devcontainer.json
chat_coordinator/: agent.py
datetime_candidates_builder/: agent.py
participants_condition_builder/: agent.py
schedule/: api.py  dependencies.py  interfaces.py  models.py  schemas.py  services.py
schedule_manager/: agent.py  openapi.py
time_condition_builder/: agent.py
